fixes bug related to hoursCompleted not showing in UI

--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -5,3 +5,13 @@
   color: rgb(211, 214, 216);
   padding: 20px;
 }
+
+header > span {
+  font-size: 2.4rem;
+  margin: auto;
+}
+
+header {
+  display: flex;
+  margin: 25px;
+}
